--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Pavan Kumar Reddy",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.18.3",
     "validator": "^13.15.15"
